Bugfix #226: positionning was broken on grappeli

--- a/autocomplete_light/static/autocomplete_light/style.css
+++ b/autocomplete_light/static/autocomplete_light/style.css
@@ -89,6 +89,23 @@ body.change-form .autocomplete-light-widget
     width: 230px;
 }
 
+.autocomplete-light-widget {
+    /* "Position" the widget */
+    position: relative;
+}
+
+input.autocomplete {
+    position: relative;
+    vertical-align: top;
+}
+
+.autocomplete-light-widget.yourlabs-autocomplete {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 100;
+}
+
 .autocomplete-light-widget .deck [data-value],
 .autocomplete-light-widget .deck .choice
 {
